--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -117,18 +117,13 @@
   .table
     font-size: 16px
 
-  .dropdown-menu-col h4
-    margin: 0 0 15px
-    font-size: 14px
-
-  .dropdown-menu-col
-    h3
-      font-size: 20px
-      margin: 0 0 20px
 
   .submenu
     font-size: 10px
     padding: 0
+
+  .publication-information
+    margin: 0 0 20px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px)
