--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -579,7 +579,7 @@ footer
   .collapse
     width: 100%
     order: 1
-    background: #ccc
+    box-shadow: 0 0 5px rgba(#000, .1)
   .submenu
     padding: 10px
     width: 100%
