--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -19,6 +19,8 @@
   .user-menu
     margin: 0 0 30px
 
+  .gallery-publication__item
+    height: 290px
 
 
 /* Small Devices, Tablets */
@@ -73,7 +75,7 @@
     margin: 30px 0 0
 
   .menu
-    font-size: 16px
+    font-size: 15px
 
   .logo
     font-size: 24px
@@ -124,6 +126,9 @@
 
   .publication-information
     margin: 0 0 20px
+
+  .publication-page .publication-box__max
+    height: 260px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px)
@@ -196,21 +201,10 @@
       a
         max-width: 40px
 
-  .publication-page
-    .publication-box__min
-      width: 80px
-      height: 80px
-    .publication-box__max
-      width: 100%
-      padding: 0
 
-  .publication-box__wrap
+  .gallery-publication, .publication-box__wrap
     width: 100%
-    display: flex
-    align-items: stretch
-    flex-wrap: wrap
-    justify-content: space-around
-    flex-direction: row
+
 
   .card-product
     padding: 15px
@@ -221,6 +215,11 @@
 
   .prices-section h2
     margin: 0 0 30px
+
+  .publication-box__preview
+    padding: 0 10px
+    height: 80px
+
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px)
@@ -282,4 +281,7 @@
 
   .user-page h1
     font-size: 18px
+
+  .publication-box__preview
+    height: 60px
 
