--- a/app/css/main.css
+++ b/app/css/main.css
@@ -354,7 +354,7 @@ strong {
   margin: 0;
   border: none;
     border-radius: 0;
-  padding: 30px;
+  padding: 30px 20px;
   display: none;
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
           box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
@@ -373,12 +373,12 @@ strong {
           justify-content: flex-start; }
 
 .dropdown-menu-col {
-  padding: 0 10px;
+  padding: 0 20px 0 0;
   width: 20%; }
 
 .dropdown-menu-img {
   width: 100%;
-  height: 180px;
+  height: 240px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -398,6 +398,10 @@ strong {
 .submenu {
   font-size: 12px; }
   .submenu li {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
     border-bottom: 1px solid #ccc; }
     .submenu li:after {
       display: none; }
@@ -405,7 +409,31 @@ strong {
       border: none; }
     .submenu li a {
       padding: 5px 0;
-      color: #000; }
+      color: #000;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      .submenu li a:after {
+        content: '';
+        width: 10px;
+        min-width: 10px;
+        height: 12px;
+        background: url("../img/arrow-right.svg") no-repeat center;
+          background-size: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        margin: 0 0 0 auto; }
       .submenu li a:hover {
         color: #FF8800; }
 
@@ -1036,11 +1064,6 @@ footer {
             align-items: flex-start;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
-  .publication-page .publication-box__max {
-    height: 290px;
-    width: calc(100% - 80px);
-    padding: 0 10px 0 0;
-    margin: 0 0 12px; }
   .publication-page .profile-box__footer {
     margin: 0; }
   .publication-page .profile-box {
@@ -1061,6 +1084,29 @@ footer {
       padding: 0 9px 12px;
       font-weight: bold; }
 
+.gallery-publication {
+  width: calc(100% - 90px);
+  margin: 0 auto 12px 0;
+  overflow: hidden; }
+
+.gallery-publication__item {
+  width: 100%;
+  height: 340px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .gallery-publication__item img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
+
 .price {
   margin: 5px 0 16px;
   font-weight: bold;
@@ -1070,20 +1116,19 @@ footer {
     font-size: 18px; }
 
 .publication-box__wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  height: 100%;
   width: 80px; }
-  .publication-box__wrap .publication-box__min {
-    height: 71px;
-    margin: 0 0 15px; }
+
+.publication-box__preview {
+  height: 71px;
+  margin: 0 0 15px;
+  width: 100%;
+  cursor: pointer; }
+  .publication-box__preview img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
 
 .search-page {
   padding: 21px 0 40px; }
@@ -1728,8 +1773,91 @@ footer {
   width: 100%;
   background: #ccc;
   padding: 10px;
-  min-height: 50px;
   text-align: center; }
+
+.modal-content {
+  border: 1px solid #000;
+  padding: 20px;
+  position: relative; }
+
+.modal-header {
+  border: none; }
+
+.close {
+  margin: 0;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  opacity: 1; }
+  .close:before, .close:after {
+    content: '';
+    width: 2px;
+    height: 100%;
+    background: #FF8800;
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    left: 10px; }
+  .close:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .close:after {
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg); }
+
+.form-modal input {
+  font-size: 14px; }
+  .form-modal input::-webkit-input-placeholder {
+    color: #333; }
+  .form-modal input::-moz-placeholder {
+    color: #333; }
+  .form-modal input::-ms-input-placeholder {
+    color: #333; }
+  .form-modal input::placeholder {
+    color: #333; }
+
+.form-modal label {
+  margin: 0 0 20px; }
+
+.form-modal textarea {
+  font-size: 14px;
+  height: 100px;
+  padding: 10px; }
+  .form-modal textarea::-webkit-input-placeholder {
+    color: #333; }
+  .form-modal textarea::-moz-placeholder {
+    color: #333; }
+  .form-modal textarea::-ms-input-placeholder {
+    color: #333; }
+  .form-modal textarea::placeholder {
+    color: #333; }
+
+.form-modal button {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content; }
+
+.form-modal .input-title {
+  font-size: 14px;
+  margin: 0 0 5px; }
+
+.consent {
+  font-size: 14px;
+  margin: 10px auto 0;
+  color: #333;
+  text-align: center; }
+  .consent a {
+    display: inline; }
+
+.color-accent {
+  color: #FF8800; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
@@ -1744,7 +1872,9 @@ footer {
   .information-box {
     margin: 0 0 20px; }
   .user-menu {
-    margin: 0 0 30px; } }
+    margin: 0 0 30px; }
+  .gallery-publication__item {
+    height: 290px; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 900px) {
@@ -1788,7 +1918,7 @@ footer {
   .contacts-content {
     margin: 30px 0 0; }
   .menu {
-    font-size: 16px; }
+    font-size: 15px; }
   .logo {
     font-size: 24px; }
   .profile-info {
@@ -1822,7 +1952,9 @@ footer {
     font-size: 10px;
     padding: 0; }
   .publication-information {
-    margin: 0 0 20px; } }
+    margin: 0 0 20px; }
+  .publication-page .publication-box__max {
+    height: 260px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
@@ -1882,35 +2014,18 @@ footer {
     margin: 10px 0 0; }
     .list-payment li a {
       max-width: 40px; }
-  .publication-page .publication-box__min {
-    width: 80px;
-    height: 80px; }
-  .publication-page .publication-box__max {
-    width: 100%;
-    padding: 0; }
-  .publication-box__wrap {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row; }
+  .gallery-publication, .publication-box__wrap {
+    width: 100%; }
   .card-product {
     padding: 15px; }
   .table {
     font-size: 15px;
     min-width: 600px; }
   .prices-section h2 {
-    margin: 0 0 30px; } }
+    margin: 0 0 30px; }
+  .publication-box__preview {
+    padding: 0 10px;
+    height: 80px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px) {
@@ -1956,4 +2071,6 @@ footer {
     .bookmarks-box .price span {
       font-size: 11px; }
   .user-page h1 {
-    font-size: 18px; } }
+    font-size: 18px; }
+  .publication-box__preview {
+    height: 60px; } }
