--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -342,7 +342,7 @@ strong
   margin: 0
   border: none
     radius: 0
-  padding: 30px
+  padding: 30px 20px
   display: none
   box-shadow: 0 10px 10px rgba(#000, .3)
   width: 100%
@@ -354,13 +354,13 @@ strong
   justify-content: flex-start
 
 .dropdown-menu-col
-  padding: 0 10px
+  padding: 0 20px 0 0
   width: 20%
   
 
 .dropdown-menu-img
   width: 100%
-  height: 180px
+  height: 240px
   display: flex
   align-items: center
   justify-content: center
@@ -373,6 +373,8 @@ strong
 .submenu
   font-size: 12px
   li
+    align-items: center
+    width: 100%
     border-bottom: 1px solid #ccc
     &:after
       display: none
@@ -381,6 +383,20 @@ strong
     a
       padding: 5px 0
       color: #000
+      width: 100%
+      display: flex
+      align-items: center
+      &:after
+        content: ''
+        width: 10px
+        min-width: 10px
+        height: 12px
+        background: url("../img/arrow-right.svg") no-repeat center
+          size: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+        margin: 0 0 0 auto
       &:hover
         color: $accent
 
@@ -903,11 +919,7 @@ footer
     align-items: flex-start
     flex-wrap: wrap
 
-  .publication-box__max
-    height: 290px
-    width: calc(100% - 80px)
-    padding: 0 10px 0 0
-    margin: 0 0 12px
+
 
   .profile-box__footer
     margin: 0
@@ -933,6 +945,22 @@ footer
       padding: 0 9px 12px
       font-weight: bold
 
+.gallery-publication
+
+  width: calc(100% - 90px)
+  margin: 0 auto 12px 0
+  overflow: hidden
+
+.gallery-publication__item
+  width: 100%
+  height: 340px
+  display: flex
+  align-items: center
+  justify-content: center
+  img
+    width: 100%
+    height: 100%
+    object-fit: cover
 
 .price
   margin: 5px 0 16px
@@ -944,14 +972,19 @@ footer
     font-size: 18px
 
 .publication-box__wrap
-  display: flex
-  flex-direction: column
-  align-items: flex-start
+  height: 100%
   width: 80px
 
-  .publication-box__min
-    height: 71px
-    margin: 0 0 15px
+
+.publication-box__preview
+  height: 71px
+  margin: 0 0 15px
+  width: 100%
+  cursor: pointer
+  img
+    width: 100%
+    height: 100%
+    object-fit: cover
 
 //search-page
 .search-page
@@ -1506,7 +1539,6 @@ footer
   .svg-icon
     fill: $accent
 
-
 .check-item
   fill: none
   width: 24px
@@ -1544,9 +1576,74 @@ footer
   width: 100%
   background: #ccc
   padding: 10px
-  min-height: 50px
   text-align: center
 
+//modal
+
+.modal-content
+  border: 1px solid #000
+  padding: 20px
+  position: relative
+
+.modal-header
+  border: none
+
+.close
+  margin: 0
+  padding: 0
+  width: 20px
+  height: 20px
+  position: absolute
+  right: 0
+  top: 0
+  cursor: pointer
+  opacity: 1
+  &:before, &:after
+    content: ''
+    width: 2px
+    height: 100%
+    background: $accent
+    position: absolute
+    display: inline-block
+    top: 0
+    left: 10px
+  &:before
+    transform: rotate(45deg)
+  &:after
+    transform: rotate(135deg)
+
+.form-modal
+  input
+    font-size: 14px
+    &::placeholder
+      color: #333
+  label
+    margin: 0 0 20px
+  textarea
+    font-size: 14px
+    height: 100px
+    padding: 10px
+    &::placeholder
+      color: #333
+  button
+    margin: 0 auto
+    padding: 0 20px
+    max-width: none
+    width: fit-content
+  .input-title
+    font-size: 14px
+    margin: 0 0 5px
+
+.consent
+  font-size: 14px
+  margin: 10px auto 0
+  color: #333
+  text-align: center
+  a
+    display: inline
+
+.color-accent
+  color: $accent
 
 @import "media"
 // Всегда в конце
