--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -19,7 +19,7 @@
   .user-menu
     margin: 0 0 30px
 
-  .gallery-publication__item
+  .gallery-publication__item, .video-slider-box
     height: 290px
 
 
@@ -202,8 +202,11 @@
         max-width: 40px
 
 
-  .gallery-publication, .publication-box__wrap
+  .gallery-publication, .publication-box__wrap, .video-slider-preview, .video-slider
     width: 100%
+
+  .video-slider
+    margin: 0 0 10px
 
 
   .card-product
@@ -216,9 +219,12 @@
   .prices-section h2
     margin: 0 0 30px
 
-  .publication-box__preview
+  .publication-box__preview, .video-slider-preview .video-slider-box
     padding: 0 10px
     height: 80px
+
+  .nav-tabs-my .nav-link
+    margin: 0 10px 0 0
 
 
 /* Custom, iPhone Retina */
