--- a/app/css/main.css
+++ b/app/css/main.css
@@ -159,6 +159,23 @@ label {
     color: #fff;
     background: #89A6D7; }
 
+.btn-danger {
+  background: #FF8800;
+  color: #fff;
+  font-size: 24px;
+  border: 2px solid #FF8800;
+    border-radius: 6px;
+  height: 35px;
+  width: 100%; }
+  .btn-danger .svg-icon {
+    fill: none;
+    stroke: #fff;
+    width: 18px;
+    height: 18px; }
+  .btn-danger:hover {
+    border-color: #FF8800;
+    background: #db6e00; }
+
 .btn-red {
   color: #fff;
   background: #FF0000;
@@ -811,6 +828,17 @@ footer {
 .profile-box .box-text {
   color: #000; }
 
+.links-modals {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 10px 0 0; }
+
 .list-rating {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -900,11 +928,11 @@ footer {
   .profile-info__links:last-child {
     margin: 0; }
   .profile-info__links .svg-icon {
-    fill: none;
     width: 24px;
     height: 24px;
     min-width: 24px;
-    margin: 0 8px 0 0; }
+    margin: 0 8px 0 0;
+    fill: #FF8800; }
   .profile-info__links:hover {
     color: #FF8800; }
 
@@ -1263,6 +1291,72 @@ footer {
         -ms-flex-pack: center;
             justify-content: center; }
 
+.nav-tabs-my {
+  width: 100%;
+  margin: 0 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+  .nav-tabs-my .nav-link {
+    border: 1px solid #FF8800;
+      border-radius: 5px;
+    height: auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 10px 20px;
+    color: #000;
+    margin: 0 20px 0 0; }
+    .nav-tabs-my .nav-link:last-child {
+      margin: 0; }
+  .nav-tabs-my .nav-link.active {
+    color: #fff;
+    background: #FF8800; }
+
+.videos-wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.video-slider {
+  width: calc(100% - 100px);
+  margin: 0 auto 12px 0; }
+
+.video-slider-preview {
+  width: 90px;
+  height: 100%; }
+  .video-slider-preview .video-slider-box {
+    width: 100%;
+    height: 71px;
+    margin: 0 0 15px; }
+
+.video-slider-box {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 340px; }
+  .video-slider-box iframe {
+    width: 100%;
+    height: 100%; }
+
 .card-product {
   width: 100%;
   margin: 0 0 20px;
@@ -1320,6 +1414,8 @@ footer {
       font-size: 12px; }
   .card-product:last-child {
     margin: 0; }
+  .card-product__footer {
+    margin: 10px 0 0; }
 
 .rating-wrapper {
   display: -webkit-box;
@@ -1889,7 +1985,7 @@ footer {
     margin: 0 0 20px; }
   .user-menu {
     margin: 0 0 30px; }
-  .gallery-publication__item {
+  .gallery-publication__item, .video-slider-box {
     height: 290px; } }
 
 /* Small Devices, Tablets */
@@ -2030,8 +2126,10 @@ footer {
     margin: 10px 0 0; }
     .list-payment li a {
       max-width: 40px; }
-  .gallery-publication, .publication-box__wrap {
+  .gallery-publication, .publication-box__wrap, .video-slider-preview, .video-slider {
     width: 100%; }
+  .video-slider {
+    margin: 0 0 10px; }
   .card-product {
     padding: 15px; }
   .table {
@@ -2039,9 +2137,11 @@ footer {
     min-width: 600px; }
   .prices-section h2 {
     margin: 0 0 30px; }
-  .publication-box__preview {
+  .publication-box__preview, .video-slider-preview .video-slider-box {
     padding: 0 10px;
-    height: 80px; } }
+    height: 80px; }
+  .nav-tabs-my .nav-link {
+    margin: 0 10px 0 0; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px) {
