--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -157,6 +157,23 @@ label
     color: #fff
     background: $btn
 
+.btn-danger
+  background: $accent
+  color: #fff
+  font-size: 24px
+  border: 2px solid #FF8800
+    radius: 6px
+  height: 35px
+  width: 100%
+  .svg-icon
+    fill: none
+    stroke: #fff
+    width: 18px
+    height: 18px
+  &:hover
+    border-color: #FF8800
+    background: #db6e00
+
 .btn-red
   color: #fff
   background: #FF0000
@@ -278,6 +295,8 @@ strong
     height: 55px
     padding: 0 92px 0 18px
     border: none
+
+
 
 .header-bottom
   padding: 11px 0 0
@@ -710,6 +729,11 @@ footer
   .box-text
     color: #000
 
+.links-modals
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  margin: 10px 0 0
 
 .list-rating
   display: flex
@@ -777,11 +801,12 @@ footer
     margin: 0
 
   .svg-icon
-    fill: none
+    //fill: none
     width: 24px
     height: 24px
     min-width: 24px
     margin: 0 8px 0 0
+    fill: $accent
 
   &:hover
     color: $accent
@@ -1093,6 +1118,55 @@ footer
     align-items: center
     justify-content: center
 
+.nav-tabs-my
+  width: 100%
+  margin: 0 0 10px
+  display: flex
+  flex-wrap: wrap
+  align-items: flex-start
+  .nav-link
+    border: 1px solid #FF8800
+      radius: 5px
+    height: auto
+    width: fit-content
+    padding: 10px 20px
+    color: #000
+    margin: 0 20px 0 0
+    &:last-child
+      margin: 0
+  .nav-link.active
+    color: #fff
+    background: $accent
+
+.videos-wrapper
+  width: 100%
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+
+.video-slider
+  width: calc(100% - 100px)
+  margin: 0 auto 12px 0
+
+.video-slider-preview
+  width: 90px
+  height: 100%
+  .video-slider-box
+    width: 100%
+    height: 71px
+    margin: 0 0 15px
+
+
+.video-slider-box
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  height: 340px
+  iframe
+    width: 100%
+    height: 100%
+
 .card-product
   width: 100%
   margin: 0 0 20px
@@ -1141,6 +1215,8 @@ footer
 
   &:last-child
     margin: 0
+  &__footer
+    margin: 10px 0 0
 
 .rating-wrapper
   display: flex
