--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -574,6 +574,9 @@ footer
 
 .contacts-content
   padding: 10px
+  .box-text
+    p
+      margin: 0 0 10px
 
 .contacts-info
   margin: 12px 0 0
@@ -583,6 +586,16 @@ footer
 
   h3
     margin: 0
+  ul
+    margin: 0 0 10px
+    li
+      margin: 0 0 10px
+
+.impressum
+  p
+    margin: 0 0 10px
+
+
 
 .contacts-info
   padding: 0 0 0 20px
