--- a/app/css/main.css
+++ b/app/css/main.css
@@ -176,6 +176,17 @@ label {
     border-color: #FF8800;
     background: #db6e00; }
 
+.btn-danger-my {
+  background: #BB0000;
+  color: #fff;
+  border-color: #BB0000; }
+
+.btn-border {
+  border: 1px solid #FF8800;
+    border-radius: 5px;
+  background: #fff;
+  padding: 6px 10px; }
+
 .btn-red {
   color: #fff;
   background: #FF0000;
@@ -185,6 +196,25 @@ label {
   .btn-red:hover {
     background: #FF8800;
     color: #fff; }
+
+.btn-group {
+  width: 100%;
+  margin: 0 0 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  .btn-group .btn {
+    margin: 0 20px 0 0; }
+    .btn-group .btn:last-child {
+      margin: 0; }
+
+.btn-group > .btn-group:not(:last-child) > .btn, .btn-group > .btn:not(:last-child):not(.dropdown-toggle), .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn:not(:first-child) {
+  border-radius: 5px; }
+
+.color-green {
+  color: green; }
+
+.color-red {
+  color: red; }
 
 .wrapper {
   display: -webkit-box;
@@ -666,6 +696,11 @@ footer {
 .impressum p {
   margin: 0 0 10px; }
 
+.login-wrapper {
+  margin: 0 auto; }
+  .login-wrapper h3 {
+    text-align: center; }
+
 .contacts-info {
   padding: 0 0 0 20px;
   font-size: 14px; }
@@ -941,7 +976,8 @@ footer {
     height: 24px;
     min-width: 24px;
     margin: 0 8px 0 0;
-    fill: #FF8800; }
+    fill: #FF8800;
+    color: #FF8800; }
   .profile-info__links:hover {
     color: #FF8800; }
 
@@ -1480,6 +1516,30 @@ footer {
     margin: 0; }
   .user-page .card-product .profile-info__links {
     font-size: 18px; }
+  .user-page .btn-danger-my {
+    margin: 10px auto 0; }
+
+.mailbox-controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%; }
+  .mailbox-controls .checkbox-toggle {
+    margin: 0 10px 0 0; }
+
+.table-striped td {
+  font-size: 14px; }
+
+.icheck-primary {
+  width: 30px;
+  min-width: 30px; }
+  .icheck-primary input {
+    height: 30px; }
 
 .user-menu-title {
   font-size: 20px;
@@ -1842,6 +1902,136 @@ footer {
   .table .btn {
     margin: 0 auto; }
 
+.table-prices {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border: none;
+  margin: 20px 0 0; }
+  .table-prices .tr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    width: calc(25% - 10px);
+    background: #fff;
+    -webkit-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+    border: 1px solid #dee2e6;
+    padding: 5px; }
+    .table-prices .tr:hover {
+      -webkit-box-shadow: 0px 3px 3px 0px #888888;
+              box-shadow: 0px 3px 3px 0px #888888; }
+  .table-prices .tr-body .td {
+    width: 100%;
+    min-height: 55px;
+    border-bottom: 1px solid #dee2e6;
+    padding: 8px;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    font-size: 11px;
+    overflow: hidden; }
+  .table-prices .td:last-child {
+    border-bottom: none; }
+  .table-prices .tr:not(:first-child) .td {
+    text-align: center; }
+
+.tr-head {
+  color: #fff;
+  background: #FF8800;
+  text-transform: capitalize; }
+
+.tr-body {
+  width: 100%; }
+
+.table-prices .btn {
+  border-radius: 0;
+  margin: 0 auto;
+  padding: 10px 40px;
+  border: 1px solid #34495E;
+  color: #34495E;
+  font-size: 15px;
+  text-transform: uppercase;
+  height: auto;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-box-shadow: 0 0 1px transparent;
+          box-shadow: 0 0 1px transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  background: #fff; }
+  .table-prices .btn:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #34495E;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+            transform-origin: 0 50%;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+    -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out; }
+  .table-prices .btn:hover, .table-prices .btn:focus {
+    color: #fff;
+    background: transparent; }
+  .table-prices .btn:hover:before, .table-prices .btn:focus:before {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+            transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66); }
+
 .links-favorite.active .svg-icon {
   fill: #FF8800; }
 
@@ -1868,7 +2058,6 @@ footer {
   text-transform: uppercase;
   padding: 10px;
   width: 100%;
-  background: #ccc;
   font-size: 15px; }
 
 .price-tariffs {
@@ -1881,10 +2070,11 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 10px auto 30px;
+  margin: 10px auto;
   text-align: center;
   font-size: 30px;
-  font-weight: 700; }
+  font-weight: 700;
+  border-top: 2px solid #c56500; }
   .price-tariffs .currency {
     font-weight: normal;
     font-size: 20px;
@@ -1892,7 +2082,6 @@ footer {
 
 .footer-tariffs {
   width: 100%;
-  background: #ccc;
   padding: 10px;
   text-align: center; }
 
@@ -1929,6 +2118,10 @@ footer {
   .close:after {
     -webkit-transform: rotate(135deg);
             transform: rotate(135deg); }
+
+.recapcha {
+  margin: 0 auto 10px;
+  text-align: center; }
 
 .form-modal input {
   font-size: 14px; }
@@ -1969,6 +2162,11 @@ footer {
   font-size: 14px;
   margin: 0 0 5px; }
 
+.form-modal a.btn {
+  margin: 10px auto 0; }
+  .form-modal a.btn:last-child {
+    margin: 5px auto 0; }
+
 .consent {
   font-size: 14px;
   margin: 10px auto 0;
@@ -1979,6 +2177,98 @@ footer {
 
 .color-accent {
   color: #FF8800; }
+
+.d-inline {
+  display: inline-block; }
+
+.checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%; }
+
+.checkbox-inp {
+  display: none; }
+
+.custom-checkbox.checkbox-inp + label {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .custom-checkbox.checkbox-inp + label:before {
+    content: '';
+    display: inline-block;
+    width: 1.5em;
+    min-width: 1.5em;
+    height: 1.5em;
+    border: 1px solid #adb5bd;
+      border-radius: 0.25em;
+    margin-right: 0.5em; }
+
+.form-profile-box {
+  margin: 0 0 40px; }
+  .form-profile-box h3 {
+    font-size: 22px;
+    font-weight: 300;
+    margin: 0 0 20px; }
+  .form-profile-box .box-profile {
+    padding: 0;
+    max-width: 200px;
+    width: 100%; }
+  .form-profile-box textarea {
+    height: 100px;
+    margin: 10px 0 0; }
+
+.form-profile .btn-group .btn {
+  max-width: 48%;
+  width: 100%; }
+
+.custom-file-input, .custom-file-label {
+  outline: none;
+  color: #000;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 1px solid #FF8800;
+    border-radius: 5px; }
+  .custom-file-input:hover, .custom-file-input:focus, .custom-file-label:hover, .custom-file-label:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none; }
+
+.custom-file-input:focus ~ .custom-file-label {
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+
+.custom-file-label::after {
+  background: #FF8800;
+  color: #fff;
+  cursor: pointer; }
+
+.form-publication .form-group label sup {
+  color: #FF0000; }
+
+.select2-container--default .select2-selection--single {
+  border: 1px solid #FF8800;
+    border-radius: 5px; }
+
+.select2-container .select2-selection--single {
+  height: 36px; }
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 36px; }
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+  height: 100%; }
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+  padding-left: 10px;
+  color: #000; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
@@ -2075,7 +2365,9 @@ footer {
   .publication-information {
     margin: 0 0 20px; }
   .publication-page .publication-box__max {
-    height: 260px; } }
+    height: 260px; }
+  .form-profile label {
+    margin: 0 0 10px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
@@ -2150,7 +2442,12 @@ footer {
     padding: 0 10px;
     height: 80px; }
   .nav-tabs-my .nav-link {
-    margin: 0 10px 0 0; } }
+    margin: 0 10px 0 0; }
+  .table-prices {
+    min-width: auto; }
+    .table-prices .tr {
+      width: calc(50% - 15px);
+      margin: 0 0 30px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px) {
@@ -2170,7 +2467,14 @@ footer {
     width: 100%;
     padding: 10px 0 0; }
   .product-card, .publication-slider .publication-box {
-    width: 100%; } }
+    width: 100%; }
+  .form-profile .btn-group .btn {
+    max-width: none;
+    width: 100%; }
+  .btn-group .btn {
+    width: 100%;
+    margin: 0 0 10px;
+    max-width: none; } }
 
 @media only screen and (max-width: 420px) {
   .input-title {
@@ -2181,7 +2485,8 @@ footer {
     width: 100%;
     margin: 10px 0 0; }
   .logo {
-    font-size: 22px; }
+    font-size: 22px;
+    margin: 0; }
   .header-box {
     font-size: 12px; }
   .form-search input {
@@ -2198,4 +2503,9 @@ footer {
   .user-page h1 {
     font-size: 18px; }
   .publication-box__preview {
-    height: 60px; } }
+    height: 60px; }
+  footer .list-social {
+    min-height: auto;
+    margin: 0 0 0 10px; }
+  .table-prices .tr {
+    width: 100%; } }
