--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -74,7 +74,7 @@ body
 
 html, body
   overflow-x: hidden
-  height: 100%
+  //height: 100%
 
 img
   display: block
@@ -107,13 +107,13 @@ input, textarea, select, .form-control
   padding: 0 10px
   color: #000
   font-size: 18px
-
+  transition: .3s ease
   &::placeholder
     color: #000
 
   &:hover, &:focus
     outline: none
-    box-shadow: none
+    box-shadow: 0 0 0 0.2rem rgba($accent, 0.25)
 
 
 select
@@ -1658,13 +1658,6 @@ footer
   &:hover
     color: $accent
 
-//prices-section
-.prices-section
-  margin: 27px 0 50px
-  h2
-    font-weight: normal
-    margin: 0 0 47px
-
 .table-wrapper
   width: 100%
   overflow-x: auto
@@ -1987,6 +1980,14 @@ footer
 .select2-container .select2-selection--single .select2-selection__rendered
   padding-left: 10px
   color: #000
+
+.popover-btn
+  border-radius: 50%
+  width: 24px
+  height: 24px
+  min-width: 24px
+  display: inline-flex
+  font-size: 14px
 
 @import "media"
 // Всегда в конце
